--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,17 @@
 #
 # Docker-compose file for running timeloop/accelergy
 #
+# Note: 
+#    The exercises are put in ./tutorial
+#
 # Run as follows:
 #
 #    1) Put this file in an otherwise empty directory
 #    2) Cd to that directory
 #    3) Run the following command:
 #
-#        % docker-compose run exercises 
-#
+#        % docker-compose run --rm exercises 
+#        
 
 version: '3'
 
