--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ version: '3'
 
 services:
   exercises:
+    hostname: micro-19
     image: jsemer/timeloop-accelergy-tutorial:latest
     volumes:
       - ./tutorial:/home/tutorial
