--- a/exercises/timeloop/03-model-conv1d+oc-3level/3level.arch.yaml
+++ b/exercises/timeloop/03-model-conv1d+oc-3level/3level.arch.yaml
@@ -9,32 +9,36 @@ architecture:
       class: DRAM
       attributes:
         word-bits: 8
-        vector-access-energy: 32
+        n_words: 32
+        width: 256
 
     subtree:
     - name: Chip
+      attributes:
+        technology: 40nm
 
       local:
-      - name: GlobalBuffer
+      - name: GlobalBuffer # 256KB buffer
         class: SRAM
         attributes:
-          sizeKB: 256
+          depth: 8192
+          width: 256
           instances: 1
           word-bits: 8
-          vector-access-energy: 5
+          n_words: 32
         
       subtree:
       - name: PE
       
         local:
         - name: RegisterFile
-          class: SRAM
+          class: regfile
           attributes:
-            entries: 64
+            depth: 64
             instances: 1
             word-bits: 8
-            vector-access-energy: 1
+            width: 8
         - name: MACC
           class: intmac
           attributes:
-            word-bits: 8
+            datawidth: 8
