--- a/exercises/timeloop/06-mapper-convlayer-eyeriss/eyeriss-256.arch.yaml
+++ b/exercises/timeloop/06-mapper-convlayer-eyeriss/eyeriss-256.arch.yaml
@@ -1,44 +1,68 @@
 architecture:
-  storage:
-  - instances: 256
-    read_bandwidth: 2
-    name: PsumRegFile
-    write_bandwidth: 2
-    entries: 16
-    meshX: 16
-    word-bits: 16
-  - instances: 256
-    read_bandwidth: 2
-    name: WeightRegFile
-    write_bandwidth: 2
-    entries: 192
-    meshX: 16
-    word-bits: 16
-  - instances: 256
-    read_bandwidth: 2
-    name: InputRegFile
-    write_bandwidth: 2
-    entries: 12
-    meshX: 16
-    word-bits: 16
-  - meshX: 16
-    instances: 16
-    name: DummyBuffer
-    word-bits: 16
-    entries: 0
-  - instances: 1
-    read_bandwidth: 16
-    name: GlobalBuffer
-    write_bandwidth: 16
-    meshX: 1
-    word-bits: 16
-    sizeKB: 128
-    block-size: 4
-  - word-bits: 16
-    instances: 1
-    technology: DRAM
-    name: DRAM
-  arithmetic:
-    word-bits: 16
-    instances: 256
-    name: MACs
+  version: 0.2
+
+  subtree:
+    - name: System
+      local:
+        - name: DRAM
+          class: DRAM
+          attributes:
+            word_width: 16
+            width: 64
+
+      subtree:
+        - name: Eyeriss
+          attributes:
+            technology: 40nm
+          local:
+            - name: DummyBuffer[0..15]
+              class: regfile
+              attributes:
+                width: 16
+                word_width: 16
+                entries: 0
+                meshX: 16
+            - name: GlobalBuffer
+              class: SRAM
+              attributes:
+                word_width: 16
+                n_words: 4
+                width: word_width * n_words
+                depth: 16384
+                meshX: 1
+                read_bandwidth: 16
+                write_bandwidth: 16
+          subtree:
+            - name: PE[0..255]
+              local:
+                - name: PsumRegFile
+                  class: regfile
+                  attributes:
+                    depth: 16
+                    width: 16
+                    word_width: 16
+                    meshX: 16
+                    read_bandwidth: 2
+                    write_bandwidth: 2
+                - name: WeightRegFile
+                  class: regfile
+                  attributes:
+                    depth: 192
+                    width: 16
+                    word_width: 16
+                    meshX: 16
+                    read_bandwidth: 2
+                    write_bandwidth: 2
+                - name: InputRegFile
+                  class: regfile
+                  attributes:
+                    depth: 12
+                    width: 16
+                    word_width: 16
+                    meshX: 16
+                    read_bandwidth: 2
+                    write_bandwidth: 2
+                - name: MACs
+                  class: intmac
+                  attributes:
+                    datawidth: 16
