--- a/exercises/timeloop/00-model-conv1d-1level/1level.arch.yaml
+++ b/exercises/timeloop/00-model-conv1d-1level/1level.arch.yaml
@@ -2,16 +2,19 @@ architecture:
   version: 0.2
   
   subtree:
-  - name: PE  
+  - name: PE
+    attributes:
+      technology: 40nm
+
     local:
     - name: Buffer
-      class: SRAM
+      class: regfile
       attributes:
-        entries: 64
+        depth: 64
+        width: 8
         instances: 1
         word-bits: 8
-        vector-access-energy: 1
     - name: MACC
       class: intmac
       attributes:
-        word-bits: 8
+        datawidth: 8
