Update all mappings to use new <dim>=<value> factors directive instead of the old (but still supported) <dim><value> directive.

--- a/exercises/timeloop/02-model-conv1d+oc-2level/conv1d+oc-2level-os-tiled.map.yaml
+++ b/exercises/timeloop/02-model-conv1d+oc-2level/conv1d+oc-2level-os-tiled.map.yaml
@@ -1,11 +1,11 @@
 mapping:
   - target: MainMemory
     type: temporal
-    factors: R1 P16 K16
+    factors: R=1 P=16 K=16
     permutation: PRK
     
   - target: Buffer
     type: temporal
-    factors: R3 P1 K2
+    factors: R=3 P=1 K=2
     permutation: RPK
     
