--- a/exercises/timeloop/01-model-conv1d-2level/conv1d-2level-os.map.yaml
+++ b/exercises/timeloop/01-model-conv1d-2level/conv1d-2level-os.map.yaml
@@ -1,11 +1,11 @@
 mapping:
   - target: MainMemory
     type: temporal
-    factors: R1 P16
+    factors: R=1 P=16
     permutation: PR
     
   - target: Buffer
     type: temporal
-    factors: R3 P1
+    factors: R=3 P=1
     permutation: RP
     
