--- a/exercises/timeloop/03-model-conv1d+oc-3level/conv1d+oc-3level-example.map.yaml
+++ b/exercises/timeloop/03-model-conv1d+oc-3level/conv1d+oc-3level-example.map.yaml
@@ -1,16 +1,16 @@
 mapping:
   - target: MainMemory
     type: temporal
-    factors: R1 P1 K1
+    factors: R=1 P=1 K=1
     permutation: PRK
     
   - target: GlobalBuffer
     type: temporal
-    factors: R1 P16 K16
+    factors: R=1 P=16 K=16
     permutation: PRK
     
   - target: RegisterFile
     type: temporal
-    factors: R3 P1 K2
+    factors: R=3 P=1 K=2
     permutation: RPK
     
