--- a/exercises/timeloop/05-mapper-conv1d+oc-3level/default.mapper.yaml
+++ b/exercises/timeloop/05-mapper-conv1d+oc-3level/default.mapper.yaml
@@ -1,3 +1,7 @@
 mapper:
   optimization-metric: [ delay, energy ]
   num-threads: 1
+  algorithm: linear-pruned
+  victory-condition: 0
+  timeout: 0
+
