--- a/exercises/timeloop/04-model-conv1d+oc-3levelspatial/conv1d+oc.prob.yaml
+++ b/exercises/timeloop/04-model-conv1d+oc-3levelspatial/conv1d+oc.prob.yaml
@@ -15,6 +15,8 @@ problem:
       - [ [K] ]
       - [ [P] ]
       read-write: True
-  K: 32
-  R: 3
-  P: 16
+
+  instance:
+    K: 32
+    R: 3
+    P: 16
