Increase size of RegFile in exercise 01 to 64 to accommodate WS dataflow. Change 04 problem to conv1d+oc+ic, and changed alternative mappings to CP and KP.

--- a/exercises/timeloop/04-model-conv1d+oc-3levelspatial/conv1d+oc+ic.prob.yaml
+++ b/exercises/timeloop/04-model-conv1d+oc-3levelspatial/conv1d+oc+ic.prob.yaml
@@ -1,14 +1,16 @@
 problem:
   shape:
     name: Conv1D_OC
-    dimensions: [ K, R, P ]
+    dimensions: [ C, K, R, P ]
     data-spaces:
     - name: Weights
       projection:
+      - [ [C] ]
       - [ [K] ]
       - [ [R] ]
     - name: Inputs
       projection:
+      - [ [C] ]
       - [ [R], [P] ]
     - name: Outputs
       projection:
@@ -17,6 +19,7 @@ problem:
       read-write: True
 
   instance:
+    C: 32
     K: 32
     R: 3
     P: 16
