[timeloop] Clean up arch.yaml

--- a/exercises/timeloop/00-model-conv1d-1level/1level.arch.yaml
+++ b/exercises/timeloop/00-model-conv1d-1level/1level.arch.yaml
@@ -12,8 +12,9 @@ architecture:
       attributes:
         depth: 64
         width: 8
-        instances: 1
+        block-size: 1
         word-bits: 8
+
     - name: MACC
       class: intmac
       attributes:
