--- a/exercises/timeloop/06-mapper-convlayer-eyeriss/eyeriss-256.arch.yaml
+++ b/exercises/timeloop/06-mapper-convlayer-eyeriss/eyeriss-256.arch.yaml
@@ -7,8 +7,9 @@ architecture:
         - name: DRAM
           class: DRAM
           attributes:
-            word_width: 16
             width: 64
+            word-bits: 16
+            block-size: 4
 
       subtree:
         - name: Eyeriss
@@ -18,17 +19,18 @@ architecture:
             - name: DummyBuffer[0..15]
               class: regfile
               attributes:
+                depth: 16
                 width: 16
-                word_width: 16
-                entries: 0
+                word-bits: 16
+                block-size: 1
                 meshX: 16
             - name: GlobalBuffer
               class: SRAM
               attributes:
-                word_width: 16
-                n_words: 4
-                width: word_width * n_words
                 depth: 16384
+                width: 64
+                block-size: 4
+                word-bits: 16
                 meshX: 1
                 read_bandwidth: 16
                 write_bandwidth: 16
@@ -40,7 +42,8 @@ architecture:
                   attributes:
                     depth: 16
                     width: 16
-                    word_width: 16
+                    block-size: 1
+                    word-bits: 16
                     meshX: 16
                     read_bandwidth: 2
                     write_bandwidth: 2
@@ -49,7 +52,8 @@ architecture:
                   attributes:
                     depth: 192
                     width: 16
-                    word_width: 16
+                    block-size: 1
+                    word-bits: 16
                     meshX: 16
                     read_bandwidth: 2
                     write_bandwidth: 2
@@ -58,7 +62,8 @@ architecture:
                   attributes:
                     depth: 12
                     width: 16
-                    word_width: 16
+                    block-size: 1
+                    word-bits: 16
                     meshX: 16
                     read_bandwidth: 2
                     write_bandwidth: 2
